# woosh

./: .cursorrules  .gitignore  CMakeLists.txt  LICENSE  README.md  build-debug.ps1  build-release.ps1  vcpkg.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build-release.yml  cmake-multi-platform.yml
src/: Version.h.in  main.cpp
src/audio/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioPlayer.cpp  AudioPlayer.h
src/audio/Formats/: Mp3Codec.cpp  Mp3Codec.h  Mp3Encoder.cpp  Mp3Encoder.h  WavCodec.cpp  WavCodec.h
src/core/: Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h
src/media/: woosh.rc  woosh.rc.in
src/resources/: woosh.qrc
src/tests/: AudioClipTests.cpp  AudioEngineTests.cpp  DSPTests.cpp  ProjectTests.cpp  WaveformViewHelpersTests.cpp
src/ui/: BatchDialog.cpp  BatchDialog.h  ClipTableModel.cpp  ClipTableModel.h  MainWindow.cpp  MainWindow.h  NewProjectDialog.cpp  NewProjectDialog.h  OutputPanel.cpp  OutputPanel.h  ProcessingPanel.cpp  ProcessingPanel.h  ProjectSettingsDialog.cpp  ProjectSettingsDialog.h  SettingsDialog.cpp  SettingsDialog.h  ToggleSwitch.cpp  ToggleSwitch.h  TransportPanel.cpp  TransportPanel.h  VuMeterWidget.cpp  VuMeterWidget.h  WaveformView.cpp  WaveformView.h  WaveformViewHelpers.cpp  WaveformViewHelpers.h
src/utils/: DSP.cpp  DSP.h  FileScanner.cpp  FileScanner.h
